	  changed __sdcc_atomic_exchange_rollback_impl+40 to sdcc_atomic_exchange_rollback_end,
	  bugfix outer_skip, 3$ & 4$
	* device/lib/mcs51/__sdcc_atomic_maybe_rollback.asm: bugfix moved push psw,
	  renamed __sdcc_atomic_exchange_rollback_impl to sdcc_atomic_exchange_rollback_start,
	  changed __sdcc_atomic_exchange_rollback_impl+40 to sdcc_atomic_exchange_rollback_end
	* device/lib/mcs51/atomic_flag_test_and_set.asm: renamed
	  ___sdcc_atomic_exchange_gptr_impl to sdcc_atomic_exchange_gptr_impl,
	  use ljmp instead of lcall saving stack space,
	  let that return in dpl instead of going through acc
	* device/lib/mcs51/gptr_cmp.asm: moved push/pop dpl inside if
	* device/lib/z80/__itoa.s,
	* device/lib/z80/__ltoa.s,
	* device/lib/z80/__mulsint2slong.s,
	* device/lib/z80/__strreverse.s,
	* device/lib/z80/__uitobcd.s,
	* device/lib/z80/abs.s,
	* device/lib/z80/atomic_flag_test_and_set.s,
	* device/lib/z80/crt0.s,
	* device/lib/z80/divmixed.s,
	* device/lib/z80/divsigned.s,
	* device/lib/z80/divunsigned.s,
	* device/lib/z80/memcpy.s,
	* device/lib/z80/memmove.s,
	* device/lib/z80/modmixed.s,
	* device/lib/z80/modsigned.s,
	* device/lib/z80/modunsigned.s,
	* device/lib/z80/mul.s,
	* device/lib/z80/mulchar.s,
	* device/lib/z80/setjmp.s,
	* device/lib/z80/strcpy.s,
	* device/lib/z80/strlen.s: added .module <name> & .optsdcc -mz80 sdcccall(1)
	* device/lib/z80/__ultobcd.s: added .module <name>,
	  added comments about odd ABI,
	  small optimization
	* src/SDCCerr.c (vwerror): print with newlines
	* src/SDCCglue.c (glue): emit .module first,
	  renamed genAssemblerPreamble to genAssemblerStart,
	  moved mcs51_like part to genAssemblerStart,
	  emit .optsdcc in genAssemblerStart
	* src/SDCCopt.c (checkRestartAtomic),
	* src/SDCCsymt.c (newSymbol): added commented out C11 check
	* src/pic14/glue.c (picglue),
	* src/pic16/glue.c (pic16glue),
	* src/port.h: renamed genAssemblerPreamble to genAssemblerStart
	* src/avr/main.c (_avr_genAssemblerPreamble): emit .optsdcc,